--- a/help/help.htm
+++ b/help/help.htm
@@ -12,9 +12,10 @@
 <h1>Ocal_XH – a CMSimple_XH Plugin</h1>
 <img src="../ocal.png" style="float: left" alt="Calendar">
 <p>Ocal_XH facilitates to present calendars on your website which display the
-occupancy of a certain location or other rental, so visitors can easily see whether
-the item is available on a certain date or interval. Each calendar is only meant
-for a single rental; however, you can display multiple calendars on a single page.</p>
+occupancy of a certain location or other rental, so visitors can easily see
+whether the item is available on a certain date or interval. Each calendar is
+only meant for a single rental; however, you can display multiple calendars on a
+single page. Visitors are able to switch between a calendar and a list view.</p>
 <p>The plugin does neither provide any actual booking facilities (however, you
 may be able to combine it with a mail form like <a
 href="http://3-magi.net/?CMSimple_XH/Advancedform_XH">Advancedform_XH</a>), nor
@@ -31,7 +32,7 @@ href="http://frankziesing.de/cmsimple/en/?Welcome:Calendar">Calendar</a>.</p>
 <li><a href="#usage-admin">Administration</a></li>
 </ul>
 </li>
-<li><a href="#limitations">Limitations</a></li>
+<!--<li><a href="#limitations">Limitations</a></li>-->
 <li><a href="#license">License</a></li>
 <li><a href="#credits">Credits</a></li>
 </ul>
@@ -42,9 +43,8 @@ href="http://frankziesing.de/cmsimple/en/?Welcome:Calendar">Calendar</a>.</p>
 problems!</strong></p>
 
 <h2 id="notice">Important Notice</h2>
-<p><strong>Ocal_XH is merely a draft&mdash;many features are missing yet, and
-what is there might change. It is a so called alpha version. Use with utmost
-caution!</strong></p>
+<p style="font-weight: bold">Ocal_XH couldn't be tested so far in various
+environments. It is a so called beta version. Use with caution!</p>
 <div class="toplink"><a href="#">back to top</a></div>
 
 <h2 id="requirements">Requirements</h2>
@@ -106,21 +106,21 @@ are displayed. When you're logged in as administrator, you'll see a toolbar
 where you can pick one of the available states by clicking it. Then you can
 click individual dates in the displayed calendars to assign them this state.
 When you're finished, you have to save your modifications.</p>
-<p>Currently, four states are available:</p>
+<p>Four states are available, which have the following default meanings:</p>
 <ul>
 <li>0 (white): non applicable</li>
 <li>1 (green): available</li>
 <li>2 (yellow): reserved or partly available</li>
 <li>3 (red): (fully) booked out</li>
 </ul>
+<p>If required, you can change the colors in the stylesheet and the labels in
+the language settings.</p>
 <p>Note that the administration requires JavaScript and a somewhat contemporary
 browser (e.g. IE < 8 is not supported).</p>
 <div class="toplink"><a href="#">back to top</a></div>
 
-<h2 id="limitations">Limitations</h2>
-<p>Currently, the occupancy states are displayed via CSS only, so some visitors
-might not be able to see them.</p>
-<div class="toplink"><a href="#">back to top</a></div>
+<!--<h2 id="limitations">Limitations</h2>
+<div class="toplink"><a href="#">back to top</a></div>-->
 
 <h2 id="license">License</h2>
 <p>Ocal_XH is licensed under <a
@@ -138,9 +138,9 @@ publishing the icon under LGPL.</p>
 <!--<p>This plugin uses free applications icons from <a-->
 <!--href="http://www.aha-soft.com/">Aha-Soft</a>. Many thanks for making these icons-->
 <!--freely available.</p>-->
-<!--<p>Many thanks to the community at the <a-->
-<!--href="http://www.cmsimpleforum.com/">CMSimple_XH forum</a> for tips,-->
-<!--suggestions and testing</p>-->
+<p>Many thanks to the community at the <a
+href="http://www.cmsimpleforum.com/">CMSimple_XH forum</a> for tips, suggestions
+and testing.</p>
 <p>And last but not least many thanks to <a href="http://harteg.dk/">Peter
 Harteg</a>, the "father" of CMSimple, and all developers of <a
 href="http://www.cmsimple-xh.org/"> CMSimple_XH</a> without whom this amazing
