--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -13,10 +13,11 @@
 <img src="../ocal.png" style="float: left" alt="Kalender">
 <p>Ocal_XH ermöglicht es Kalender auf Ihrer Website zu präsentieren, die die
 Belegung bestimmter Örtlichkeiten oder anderer Mietgegenstände anzeigen, so dass
-Besucher leicht sehen können, ob ein Posten an einem bestimmten Datum oder in einem
-bestimmten Zeitraum verfügbar ist. Jeder Kalender ist nur für einen einzigen
-Mietgegenstand gedacht; allerdings können sie mehrere Kalender auf einer einzigen
-Seite anzeigen.</p>
+Besucher leicht sehen können, ob ein Posten an einem bestimmten Datum oder in
+einem bestimmten Zeitraum verfügbar ist. Jeder Kalender ist nur für einen
+einzigen Mietgegenstand gedacht; allerdings können sie mehrere Kalender auf
+einer einzigen Seite anzeigen. Besucher sind in der Lage zwischen einer
+Kalender- und einer Listenansicht umzuschalten.</p>
 <p>Das Plugin bietet weder tatsächliche Buchungsmöglichkeiten (allerdings können
 Sie es u.U. mit einem Mailformular wie <a
 href="http://3-magi.net/de/?CMSimple_XH/Advancedform_XH">Advancedform_XH</a>
@@ -34,7 +35,7 @@ werden.</p>
 <li><a href="#usage-admin">Administration</a></li>
 </ul>
 </li>
-<li><a href="#limitations">Beschränkungen</a></li>
+<!--<li><a href="#limitations">Beschränkungen</a></li>-->
 <li><a href="#license">Lizenz</a></li>
 <li><a href="#credits">Danksagung</a></li>
 </ul>
@@ -45,9 +46,9 @@ werden.</p>
 stoßen!</strong></p>
 
 <h2 id="notice">Wichtiger Hinweis</h2>
-<p><strong>Ocal_XH ist lediglich ein Entwurf &ndash; viele Features fehlen noch,
-und die bestehenden könnten sich ändern. Es handelt sich um eine so genannte
-Alpha Version. Äußerste Vorsicht bei der Verwendung!</strong></p>
+<p style="font-weight: bold">Ocal_XH konnte bisher noch nicht in diversen
+Umgebungen getestet werden. Es handelt sich um eine so genannte Beta Version.
+Vorsicht bei der Verwendung!</p>
 <div class="toplink"><a href="#">zum Seitenanfang</a></div>
 
 <h2 id="requirements">Voraussetzungen</h2>
@@ -113,21 +114,21 @@ Werkzeugleiste, wo Sie einen der verfügbaren Zustände durch Anklicken auswähl
 können. Dann können Sie einzelne Tage in den angezeigten Kalendern anklicken, um
 diesen den gewählten Zustand zuzuweisen. Wenn Sie damit fertig sind, müssen Sie
 Ihre Änderungen speichern.</p>
-<p>Zur Zeit sind vier Zustände verfügbar:</p>
+<p>Es sind vier Zustände verfügbar, die wie folgt vorbelegt sind:</p>
 <ul>
 <li>0 (weiß): nicht anwendbar</li>
 <li>1 (grün): verfügbar</li>
 <li>2 (gelb): reserviert oder teilweise verfügbar</li>
 <li>3 (rot): (komplett) ausgebucht</li>
 </ul>
+<p>Bei Bedarf können Sie die Farben im Stylesheet und die Beschriftungen in den
+Spracheinstellungen ändern.</p>
 <p>Beachten Sie, dass die Administration JavaScript und einen einigermaßen
 zeitgemäßen Browser erfordert (z.B. wird IE < 8 nicht unterstüzt).</p>
 <div class="toplink"><a href="#">zum Seitenanfang</a></div>
 
-<h2><a name="limitations">Beschränkungen</a></h2>
-<p>Zur Zeit werden die Belegungszustände nur per CSS angezeigt, so dass einige
-Besucher diese u.U. nicht sehen können.</p>
-<div class="toplink"><a href="#">zum Seitenanfang</a></div>
+<!--<h2><a name="limitations">Beschränkungen</a></h2>-->
+<!--<div class="toplink"><a href="#">zum Seitenanfang</a></div>-->
 
 <h2 id="license">Lizenz</h2>
 <p>Ocal_XH kann unter Einhaltung der <a
@@ -145,9 +146,9 @@ für die Veröffentlichung des Icons unter LGPL.</p>
 <!--<p>Dieses Plugin verwendet "free applications icons" von <a-->
 <!--href="http://www.aha-soft.com/">Aha-Soft</a>. Vielen Dank für die freie-->
 <!--Verwendbarkeit dieser Icons.</p>-->
-<!--<p>Vielen Dank an die Gemeinschaft im <a-->
-<!--href="http://www.cmsimpleforum.com/">CMSimple_XH-Forum</a> für Tipps, Anregungen-->
-<!--und das Testen.</p>-->
+<p>Vielen Dank an die Gemeinschaft im <a
+href="http://www.cmsimpleforum.com/">CMSimple_XH-Forum</a> für Tipps, Anregungen
+und das Testen.</p>
 <p>Zu guter Letzt vielen Dank an <a href="http://harteg.dk/">Peter Harteg</a>,
 den "Vater" von CMSimple, und allen Entwicklern von <a
 href="http://www.cmsimple-xh.org/">CMSimple_XH</a>, ohne die dieses fantastische
