credited rothom and hixi

--- a/help/help.htm
+++ b/help/help.htm
@@ -146,7 +146,8 @@ publishing the icon under LGPL.</p>
 <!--freely available.</p>-->
 <p>Many thanks to the community at the <a
 href="http://www.cmsimpleforum.com/">CMSimple_XH forum</a> for tips, suggestions
-and testing.</p>
+and testing. Especially I like to thank rothom for being the first tester and
+hixi for suggesting the hourly calendars.</p>
 <p>And last but not least many thanks to <a href="http://harteg.dk/">Peter
 Harteg</a>, the "father" of CMSimple, and all developers of <a
 href="http://www.cmsimple-xh.org/"> CMSimple_XH</a> without whom this amazing
