--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -157,7 +157,8 @@ für die Veröffentlichung des Icons unter LGPL.</p>
 <!--Verwendbarkeit dieser Icons.</p>-->
 <p>Vielen Dank an die Gemeinschaft im <a
 href="http://www.cmsimpleforum.com/">CMSimple_XH-Forum</a> für Tipps, Anregungen
-und das Testen.</p>
+und das Testen. Besonders möchte ich rothom, der der erste Tester war, und hixi,
+die die stündlichen Kalender vorgeschlagen haben, danken.</p>
 <p>Zu guter Letzt vielen Dank an <a href="http://harteg.dk/">Peter Harteg</a>,
 den "Vater" von CMSimple, und allen Entwicklern von <a
 href="http://www.cmsimple-xh.org/">CMSimple_XH</a>, ohne die dieses fantastische
