--- a/help/help.htm
+++ b/help/help.htm
@@ -131,7 +131,7 @@ browser (e.g. IE < 8 is not supported).</p>
 <h2 id="license">License</h2>
 <p>Ocal_XH is licensed under <a
 href="http://www.gnu.org/licenses/gpl.html">GPLv3</a>.</p>
-<p>&copy; 2014 Christoph M. Becker</p>
+<p>&copy; 2014-2015 Christoph M. Becker</p>
 <div class="toplink"><a href="#">back to top</a></div>
 
 <h2 id="credits">Credits</h2>
