--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -142,7 +142,7 @@ zeitgemäßen Browser erfordert (z.B. wird IE < 8 nicht unterstüzt).</p>
 <h2 id="license">Lizenz</h2>
 <p>Ocal_XH kann unter Einhaltung der <a
 href="http://www.gnu.org/licenses/gpl.html">GPLv3</a> verwendet werden.</p>
-<p>&copy; 2014 Christoph M. Becker</p>
+<p>&copy; 2014-2016 Christoph M. Becker</p>
 <div class="toplink"><a href="#">zum Seitenanfang</a></div>
 
 <h2 id="credits">Danksagung</h2>
