--- a/help/help.htm
+++ b/help/help.htm
@@ -50,7 +50,7 @@ environments. It is a so called beta version. Use with caution!</p>
 
 <h2 id="requirements">Requirements</h2>
 <p>Ocal_XH is a plugin for CMSimple_XH. It requires CMSimple_XH &ge; 1.6 and
-PHP &ge; 5.4.0.</p>
+PHP &ge; 5.4.0 with the filter and json extensions.</p>
 <div class="toplink"><a href="#">back to top</a></div>
 
 <h2 id="installation">Installation</h2>
