--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -53,7 +53,7 @@ Vorsicht bei der Verwendung!</p>
 
 <h2 id="requirements">Voraussetzungen</h2>
 <p>Ocal_XH ist ein Plugin für CMSimple_XH. Es benötigt CMSimple_XH &ge; 1.6
-und PHP &ge; 5.4.0.</p>
+und PHP &ge; 5.4.0 mit den filter und json Extensions.</p>
 <div class="toplink"><a href="#">zum Seitenanfang</a></div>
 
 <h2 id="installation">Installation</h2>
