Increase view template test coverage

--- a/tests/approvals/DailyCalendarControllerTest.testDefaultActionRendersCalendar.approved.html
+++ b/tests/approvals/DailyCalendarControllerTest.testDefaultActionRendersCalendar.approved.html
@@ -4,6 +4,14 @@
 <p class="ocal_mode">
   <a class="ocal_button" href="/?ocal_action=list">List view</a>
 </p>
+    <!-- toolbar -->
+<div class="ocal_toolbar">
+  <span class="ocal_state" data-ocal_state="0" title=""></span>
+  <span class="ocal_state" data-ocal_state="1" title="available"></span>
+  <span class="ocal_state" data-ocal_state="2" title="reserved"></span>
+  <span class="ocal_state" data-ocal_state="3" title="booked"></span>
+  <button type="button" class="ocal_save" disabled="disabled">Save</button>
+</div>
   <!-- statusbar -->
 <div class="ocal_loaderbar"><img src="./images/ajax-loader-bar.gif" alt="loading"></div>
 <div class="ocal_statusbar"></div>
