--- a/help/help.htm
+++ b/help/help.htm
@@ -51,7 +51,7 @@ environments. It is a so called beta version. Use with caution!</p>
 
 <h2 id="requirements">Requirements</h2>
 <p>Ocal_XH is a plugin for CMSimple_XH. It requires CMSimple_XH &ge; 1.7.0 and
-PHP &ge; 7.1.0 with the filter and json extensions.</p>
+PHP &ge; 7.1.0 with the json extension.</p>
 <div class="toplink"><a href="#">back to top</a></div>
 
 <h2 id="installation">Installation</h2>
