Fix #34 (Same name for daily and hourly occupancy causes crash)
Besides documenting that daily and hourly occupancy calendars must not
have the same name, we make sure that there cannot be any confusion by
catching and reporting wrong occupancy calendar types.

--- a/help/help.htm
+++ b/help/help.htm
@@ -74,7 +74,7 @@
 <pre><code>&lt;?=ocal(&#39;%OCCUPANCY_NAME%&#39;, %NUMBER_OF_MONTHS%)?&gt;</code></pre>
 <p>To display an <em>hourly</em> occupancy calendar in the <em>template</em>, use:</p>
 <pre><code>&lt;?=ocal_hourly(&#39;%OCCUPANCY_NAME%&#39;, %NUMBER_OF_WEEKS%)?&gt;</code></pre>
-<p><code>%OCCUPANCY_NAME%</code> is an arbitrary name, that must only consist of the letters <code>a</code>-<code>z</code>, the digits <code>0</code>-<code>9</code> and hyphens (<code>-</code>).</p>
+<p><code>%OCCUPANCY_NAME%</code> is an arbitrary name, that must only consist of the letters <code>a</code>-<code>z</code>, the digits <code>0</code>-<code>9</code> and hyphens (<code>-</code>). Daily and hourly occupancy calendars must <em>not</em> have the same name.</p>
 <p><code>%NUMBER_OF_MONTHS%</code> and <code>%NUMBER_OF_WEEKS%</code> specify the number of calendars that shall be displayed simultaneously.</p>
 <p>Note that you can put an arbitrary amount of occupancy calendars on a single page, even for the same occupancy (what might make sense if you like to present a large interval, say a year, on a page, and only a small interval, say a single month, in the template).</p>
 <p>Some examples:</p>
