--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -73,7 +73,7 @@
 <pre><code>&lt;?=ocal(&#39;%NAME_DER_BELEGUNG%&#39;, %ANZAHL_DER_MONATE%)?&gt;</code></pre>
 <p>Um einen <em>stündlichen</em> Belegungskalender im <em>Template</em> anzuzeigen, verwenden Sie:</p>
 <pre><code>&lt;?=ocal_hourly(&#39;%NAME_DER_BELEGUNG%&#39;, %ANZAHL_DER_WOCHEN%)?&gt;</code></pre>
-<p><code>%NAME_DER_BELEGUNG%</code> ist ein beliebiger Name, der nur aus den Buchstaben <code>a</code>-<code>z</code>, den Ziffern <code>0</code>-<code>9</code> und dem Minuszeichen (<code>-</code>) bestehen darf.</p>
+<p><code>%NAME_DER_BELEGUNG%</code> ist ein beliebiger Name, der nur aus den Buchstaben <code>a</code>-<code>z</code>, den Ziffern <code>0</code>-<code>9</code> und dem Minuszeichen (<code>-</code>) bestehen darf. Tägliche und stündliche Belegungskalender dürfen <em>nicht</em> denselben Namen haben.</p>
 <p><code>%ANZAHL_DER_MONATE%</code> bzw. <code>%ANZAHL_DER_WOCHEN%</code> gibt die Anzahl der Kalender an, die gleichzeitig angezeigt werden sollen.</p>
 <p>Beachten Sie, dass Sie eine beliebige Anzahl von Belegungskalendern auf einer einzelnen Seite platzieren können, sogar für dieselbe Belegung (was sinnvoll sein könnte, wenn Sie auf einer Seite einen langen Zeitraum, z.B. ein Jahr, darstellen wollen, aber nur einen kleinen Zeitraum, z.B. einen einzigen Monat, im Template).</p>
 <p>Einige Beispiele:</p>
