--- a/tests/approvals/DefaultAdminControllerTest.testDefaultActionRendersPluginInfo.approved.html
+++ b/tests/approvals/DefaultAdminControllerTest.testDefaultActionRendersPluginInfo.approved.html
@@ -1,5 +1,5 @@
 <!-- info -->
-<h1>Ocal 1.1</h1>
+<h1>Ocal 1.2-dev</h1>
 <h2>System check</h2>
 <ul class="ocal_syscheck">
   <li class="xh_fail">Checking that PHP version ≥ 7.1.0 … failure</li>
