Fix #35 (Dots in page URL break calendar navigation)
The "page URLs" of CMSimple_XH are very special; they are usually not
processed by the usual PHP features, and as such are not subject to the
PHP URL parameter name replacements (spaces and periods are replaced by
underscores).  Thus, we must not process them with `http_build_query()`,
but rather refer to them via `$su`.

To avoid doing this in `CalendarController::modifyUrl()`, thereby
coupling the unrelated URL handling more to the controller, we extract
a simple `Url` class which hopefully does the job properly.

A nice side-effect of this new URL handling is that we automatically
produce more CMSimple_XH-like URLs for the starting page, whose "page
URL" is empty.  This is why we had to update a couple of tests.

--- a/tests/approvals/DailyCalendarControllerTest.testDefaultActionHandlesAjaxRequest.approved.html
+++ b/tests/approvals/DailyCalendarControllerTest.testDefaultActionHandlesAjaxRequest.approved.html
@@ -2,7 +2,7 @@
 <div class="ocal_calendars" data-name="test-daily">
   <!-- mode-link -->
 <p class="ocal_mode">
-  <a class="ocal_button" href="/?ocal_action=list">List view</a>
+  <a class="ocal_button" href="/?&amp;ocal_action=list">List view</a>
 </p>
   <input type="hidden" name="xh_csrf_token" value="dcfff515ebf5bd421d5a0777afc6358b">  <!-- toolbar -->
 <div class="ocal_toolbar">
@@ -90,8 +90,8 @@
 </table>
   <!-- pagination -->
 <p class="ocal_pagination">
-  <a class="ocal_button" href="/?ocal_year=2023&amp;ocal_month=7&amp;ocal_action=calendar">Today</a>
-  <a class="ocal_button" href="/?ocal_year=2023&amp;ocal_month=8&amp;ocal_action=calendar">Next Month</a>
-  <a class="ocal_button" href="/?ocal_year=2024&amp;ocal_month=7&amp;ocal_action=calendar">Next Year</a>
+  <a class="ocal_button" href="/?&amp;ocal_year=2023&amp;ocal_month=7&amp;ocal_action=calendar">Today</a>
+  <a class="ocal_button" href="/?&amp;ocal_year=2023&amp;ocal_month=8&amp;ocal_action=calendar">Next Month</a>
+  <a class="ocal_button" href="/?&amp;ocal_year=2024&amp;ocal_month=7&amp;ocal_action=calendar">Next Year</a>
 </p>
 </div>
