--- a/tests/approvals/DailyCalendarControllerTest.testDefaultActionRendersCalendar.approved.html
+++ b/tests/approvals/DailyCalendarControllerTest.testDefaultActionRendersCalendar.approved.html
@@ -2,7 +2,7 @@
 <div class="ocal_calendars" data-name="test-daily">
   <!-- mode-link -->
 <p class="ocal_mode">
-  <a class="ocal_button" href="/?ocal_action=list">List view</a>
+  <a class="ocal_button" href="/?&amp;ocal_action=list">List view</a>
 </p>
   <input type="hidden" name="xh_csrf_token" value="dcfff515ebf5bd421d5a0777afc6358b">  <!-- toolbar -->
 <div class="ocal_toolbar">
@@ -90,8 +90,8 @@
 </table>
   <!-- pagination -->
 <p class="ocal_pagination">
-  <a class="ocal_button" href="/?ocal_year=2023&amp;ocal_month=7&amp;ocal_action=calendar">Today</a>
-  <a class="ocal_button" href="/?ocal_year=2023&amp;ocal_month=8&amp;ocal_action=calendar">Next Month</a>
-  <a class="ocal_button" href="/?ocal_year=2024&amp;ocal_month=7&amp;ocal_action=calendar">Next Year</a>
+  <a class="ocal_button" href="/?&amp;ocal_year=2023&amp;ocal_month=7&amp;ocal_action=calendar">Today</a>
+  <a class="ocal_button" href="/?&amp;ocal_year=2023&amp;ocal_month=8&amp;ocal_action=calendar">Next Month</a>
+  <a class="ocal_button" href="/?&amp;ocal_year=2024&amp;ocal_month=7&amp;ocal_action=calendar">Next Year</a>
 </p>
 </div>
