--- a/help/help.htm
+++ b/help/help.htm
@@ -48,7 +48,7 @@
 <li><a href="#credits">Credits</a></li>
 </ul>
 <h2 id="requirements">Requirements</h2>
-<p>Ocal_XH is a plugin for CMSimple_XH. It requires CMSimple_XH ≥ 1.7.0, and PHP ≥ 7.1.0 with the <em>json</em> extension.</p>
+<p>Ocal_XH is a plugin for <a href="https://cmsimple-xh.org/">CMSimple_XH</a>. It requires CMSimple_XH ≥ 1.7.0, and PHP ≥ 7.1.0 with the <em>json</em> extension. Ocal_XH also requires <a href="https://github.com/cmb69/plib_xh">Plib_XH</a> ≥ 1.3; if that is not already installed (see <code>Settings</code> → <code>Info</code>), get the <a href="https://github.com/cmb69/plib_xh/releases/latest">lastest release</a>, and install it.</p>
 <h2 id="download">Download</h2>
 <p>The <a href="https://github.com/cmb69/ocal_xh/releases/latest">lastest release</a> is available for download on Github.</p>
 <h2 id="installation">Installation</h2>
