--- a/tests/approvals/HourlyCalendarControllerTest.testDefaultActionHandlesAjaxRequest.approved.html
+++ b/tests/approvals/HourlyCalendarControllerTest.testDefaultActionHandlesAjaxRequest.approved.html
@@ -1,10 +1,10 @@
-<!-- hourly-calendars -->
+
 <div class="ocal_week_calendars" data-name="test-hourly">
-  <!-- mode-link -->
+  
 <p class="ocal_mode">
   <a class="ocal_button" href="/?&amp;ocal_action=list">List view</a>
 </p>
-  <input type="hidden" name="xh_csrf_token" value="dcfff515ebf5bd421d5a0777afc6358b">  <!-- toolbar -->
+  <input type="hidden" name="xh_csrf_token" value="dcfff515ebf5bd421d5a0777afc6358b">  
 <div class="ocal_toolbar">
   <span class="ocal_state" data-ocal_state="0" title=""></span>
   <span class="ocal_state" data-ocal_state="1" title="available"></span>
@@ -12,10 +12,10 @@
   <span class="ocal_state" data-ocal_state="3" title="booked"></span>
   <button type="button" class="ocal_save" disabled="disabled">Save</button>
 </div>
-  <!-- statusbar -->
+  
 <div class="ocal_loaderbar"><img src="./images/ajax-loader-bar.gif" alt="loading"></div>
 <div class="ocal_statusbar"></div>
-  <!-- hourly-calendar -->
+  
 <table class="ocal_calendar" data-ocal_date="2023-26">
   <thead>
     <tr>
@@ -151,7 +151,7 @@
     </tr>
   </tbody>
 </table>
-  <!-- pagination -->
+  
 <p class="ocal_pagination">
   <a class="ocal_button" href="/?&amp;ocal_year=2023&amp;ocal_week=26&amp;ocal_action=calendar">Today</a>
   <a class="ocal_button" href="/?&amp;ocal_year=2023&amp;ocal_week=27&amp;ocal_action=calendar">Next interval</a>
