--- a/tests/approvals/DefaultAdminControllerTest.testDefaultActionRendersPluginInfo.approved.html
+++ b/tests/approvals/DefaultAdminControllerTest.testDefaultActionRendersPluginInfo.approved.html
@@ -6,6 +6,7 @@
   <li class="xh_fail">Checking that extension 'filter' is loaded … failure</li>
   <li class="xh_fail">Checking that extension 'json' is loaded … failure</li>
   <li class="xh_fail">Checking that CMSimple_XH version ≥ 1.7.0 … failure</li>
+  <li class="xh_fail">Checking that Plib_XH version ≥ 1.3 … failure</li>
   <li class="xh_warning">Checking that '' is writable … warning</li>
   <li class="xh_warning">Checking that './config/' is writable … warning</li>
   <li class="xh_warning">Checking that './css/' is writable … warning</li>
