Use Request::url() instead of injecting our own Url

--- a/tests/approvals/HourlyCalendarControllerTest.testDefaultActionHandlesAjaxRequest.approved.html
+++ b/tests/approvals/HourlyCalendarControllerTest.testDefaultActionHandlesAjaxRequest.approved.html
@@ -2,7 +2,7 @@
 <div class="ocal_week_calendars" data-name="test-hourly">
   
 <p class="ocal_mode">
-  <a class="ocal_button" href="/?&amp;ocal_action=list">List view</a>
+  <a class="ocal_button" href="/?&amp;ocal_name=test-hourly&amp;ocal_action=list">List view</a>
 </p>
   <input type="hidden" name="xh_csrf_token" value="dcfff515ebf5bd421d5a0777afc6358b">  
 <div class="ocal_toolbar">
@@ -153,7 +153,7 @@
 </table>
   
 <p class="ocal_pagination">
-  <a class="ocal_button" href="/?&amp;ocal_year=2023&amp;ocal_week=26&amp;ocal_action=calendar">Today</a>
-  <a class="ocal_button" href="/?&amp;ocal_year=2023&amp;ocal_week=27&amp;ocal_action=calendar">Next interval</a>
+  <a class="ocal_button" href="/?&amp;ocal_name=test-hourly&amp;ocal_year=2023&amp;ocal_week=26&amp;ocal_action=calendar">Today</a>
+  <a class="ocal_button" href="/?&amp;ocal_name=test-hourly&amp;ocal_year=2023&amp;ocal_week=27&amp;ocal_action=calendar">Next interval</a>
 </p>
 </div>
