--- a/tests/approvals/HourlyCalendarControllerTest.testListActionHandlesAjaxRequest.approved.html
+++ b/tests/approvals/HourlyCalendarControllerTest.testListActionHandlesAjaxRequest.approved.html
@@ -2,7 +2,7 @@
 <div data-name="test-hourly">
   
 <p class="ocal_mode">
-  <a class="ocal_button" href="/?&amp;ocal_action=calendar">Calendar view</a>
+  <a class="ocal_button" href="/?&amp;ocal_name=test-hourly&amp;ocal_action=calendar">Calendar view</a>
 </p>
   
 <div class="ocal_loaderbar"><img src="./images/ajax-loader-bar.gif" alt="loading"></div>
@@ -14,7 +14,7 @@
 </dl>
   
 <p class="ocal_pagination">
-  <a class="ocal_button" href="/?&amp;ocal_year=2023&amp;ocal_week=26&amp;ocal_action=list">Today</a>
-  <a class="ocal_button" href="/?&amp;ocal_year=2023&amp;ocal_week=27&amp;ocal_action=list">Next interval</a>
+  <a class="ocal_button" href="/?&amp;ocal_name=test-hourly&amp;ocal_year=2023&amp;ocal_week=26&amp;ocal_action=list">Today</a>
+  <a class="ocal_button" href="/?&amp;ocal_name=test-hourly&amp;ocal_year=2023&amp;ocal_week=27&amp;ocal_action=list">Next interval</a>
 </p>
 </div>
