--- a/tests/approvals/DailyCalendarControllerTest.testListActionHandlesAjaxRequest.approved.html
+++ b/tests/approvals/DailyCalendarControllerTest.testListActionHandlesAjaxRequest.approved.html
@@ -2,7 +2,7 @@
 <div data-name="test-daily">
   
 <p class="ocal_mode">
-  <a class="ocal_button" href="/?&amp;ocal_action=calendar">Calendar view</a>
+  <a class="ocal_button" href="/?&amp;ocal_name=test-daily&amp;ocal_action=calendar">Calendar view</a>
 </p>
   
 <div class="ocal_loaderbar"><img src="./images/ajax-loader-bar.gif" alt="loading"></div>
@@ -14,8 +14,8 @@
 </dl>
   
 <p class="ocal_pagination">
-  <a class="ocal_button" href="/?&amp;ocal_year=2023&amp;ocal_month=7&amp;ocal_action=list">Today</a>
-  <a class="ocal_button" href="/?&amp;ocal_year=2023&amp;ocal_month=8&amp;ocal_action=list">Next Month</a>
-  <a class="ocal_button" href="/?&amp;ocal_year=2024&amp;ocal_month=7&amp;ocal_action=list">Next Year</a>
+  <a class="ocal_button" href="/?&amp;ocal_name=test-daily&amp;ocal_year=2023&amp;ocal_month=7&amp;ocal_action=list">Today</a>
+  <a class="ocal_button" href="/?&amp;ocal_name=test-daily&amp;ocal_year=2023&amp;ocal_month=8&amp;ocal_action=list">Next Month</a>
+  <a class="ocal_button" href="/?&amp;ocal_name=test-daily&amp;ocal_year=2024&amp;ocal_month=7&amp;ocal_action=list">Next Year</a>
 </p>
 </div>
