Don't provide JS configuration in script element
If inline script execution is prevented by the content security policy,
the configuration would not be available.  Instead, we provide the
configuration in a data attribute for each widget.

--- a/tests/approvals/DailyCalendarControllerTest.testListActionHandlesAjaxRequest.approved.html
+++ b/tests/approvals/DailyCalendarControllerTest.testListActionHandlesAjaxRequest.approved.html
@@ -1,5 +1,5 @@
 
-<div data-name="test-daily">
+<div class="ocal_lists" data-name="test-daily" data-ocal-config='{"message_unsaved_changes":"There are unsaved changes that will be lost when leaving the page!","isAdmin":false}'>
   
 <p class="ocal_mode">
   <a class="ocal_button" href="/?&amp;ocal_name=test-daily&amp;ocal_action=calendar">Calendar view</a>
