--- a/tests/approvals/HourlyCalendarControllerTest.testListActionHandlesAjaxRequest.approved.html
+++ b/tests/approvals/HourlyCalendarControllerTest.testListActionHandlesAjaxRequest.approved.html
@@ -1,5 +1,5 @@
 
-<div data-name="test-hourly">
+<div class="ocal_week_lists" data-name="test-hourly" data-ocal-config='{"message_unsaved_changes":"There are unsaved changes that will be lost when leaving the page!","isAdmin":false}'>
   
 <p class="ocal_mode">
   <a class="ocal_button" href="/?&amp;ocal_name=test-hourly&amp;ocal_action=calendar">Calendar view</a>
