--- a/tests/approvals/DailyCalendarControllerTest.testDefaultActionRendersCalendar.approved.html
+++ b/tests/approvals/DailyCalendarControllerTest.testDefaultActionRendersCalendar.approved.html
@@ -1,5 +1,5 @@
 
-<div class="ocal_calendars" data-name="test-daily">
+<div class="ocal_calendars" data-name="test-daily" data-ocal-config='{"message_unsaved_changes":"There are unsaved changes that will be lost when leaving the page!","isAdmin":true}'>
   
 <p class="ocal_mode">
   <a class="ocal_button" href="/?&amp;ocal_action=list">List view</a>
