--- a/tests/approvals/HourlyCalendarControllerTest.testDefaultActionHandlesAjaxRequest.approved.html
+++ b/tests/approvals/HourlyCalendarControllerTest.testDefaultActionHandlesAjaxRequest.approved.html
@@ -1,5 +1,5 @@
 
-<div class="ocal_week_calendars" data-name="test-hourly">
+<div class="ocal_week_calendars" data-name="test-hourly" data-ocal-config='{"message_unsaved_changes":"There are unsaved changes that will be lost when leaving the page!","isAdmin":true}'>
   
 <p class="ocal_mode">
   <a class="ocal_button" href="/?&amp;ocal_name=test-hourly&amp;ocal_action=list">List view</a>
