--- a/tests/approvals/HourlyCalendarControllerTest.testListActionRendersListWithoutEntries.approved.html
+++ b/tests/approvals/HourlyCalendarControllerTest.testListActionRendersListWithoutEntries.approved.html
@@ -1,4 +1,5 @@
 
+<script type="module" src="./ocal.min.js"></script>
 <div class="ocal_week_lists" data-name="test-hourly" data-ocal-config='{"message_unsaved_changes":"There are unsaved changes that will be lost when leaving the page!","isAdmin":false}'>
   
 <p class="ocal_mode">
