Move dispatch into calendar controllers
This allows us to easily test the dispatch code.  And while we're at it
we also replace the dynamic dispatch with a clean switch.

--- a/tests/approvals/HourlyCalendarControllerTest.testListActionRendersListWithoutEntries.approved.html
+++ b/tests/approvals/HourlyCalendarControllerTest.testListActionRendersListWithoutEntries.approved.html
@@ -15,7 +15,7 @@
 </dl>
   
 <p class="ocal_pagination">
-  <a class="ocal_button" href="/?&amp;ocal_year=2023&amp;ocal_week=26&amp;ocal_action=list">Today</a>
-  <a class="ocal_button" href="/?&amp;ocal_year=2023&amp;ocal_week=27&amp;ocal_action=list">Next interval</a>
+  <a class="ocal_button" href="/?&amp;ocal_action=list&amp;ocal_year=2023&amp;ocal_week=26">Today</a>
+  <a class="ocal_button" href="/?&amp;ocal_action=list&amp;ocal_year=2023&amp;ocal_week=27">Next interval</a>
 </p>
 </div>
