--- a/tests/approvals/DailyCalendarControllerTest.testListActionHandlesAjaxRequest.approved.html
+++ b/tests/approvals/DailyCalendarControllerTest.testListActionHandlesAjaxRequest.approved.html
@@ -3,7 +3,7 @@
 <div class="ocal_lists" data-name="test-daily" data-ocal-config='{"message_unsaved_changes":"There are unsaved changes that will be lost when leaving the page!","isAdmin":false}'>
   
 <p class="ocal_mode">
-  <a class="ocal_button" href="/?&amp;ocal_name=test-daily&amp;ocal_action=calendar">Calendar view</a>
+  <a class="ocal_button" href="/?&amp;ocal_action=calendar&amp;ocal_name=test-daily">Calendar view</a>
 </p>
   
 <div class="ocal_loaderbar"><img src="./images/ajax-loader-bar.gif" alt="loading"></div>
@@ -15,8 +15,8 @@
 </dl>
   
 <p class="ocal_pagination">
-  <a class="ocal_button" href="/?&amp;ocal_name=test-daily&amp;ocal_year=2023&amp;ocal_month=7&amp;ocal_action=list">Today</a>
-  <a class="ocal_button" href="/?&amp;ocal_name=test-daily&amp;ocal_year=2023&amp;ocal_month=8&amp;ocal_action=list">Next Month</a>
-  <a class="ocal_button" href="/?&amp;ocal_name=test-daily&amp;ocal_year=2024&amp;ocal_month=7&amp;ocal_action=list">Next Year</a>
+  <a class="ocal_button" href="/?&amp;ocal_action=list&amp;ocal_name=test-daily&amp;ocal_year=2023&amp;ocal_month=7">Today</a>
+  <a class="ocal_button" href="/?&amp;ocal_action=list&amp;ocal_name=test-daily&amp;ocal_year=2023&amp;ocal_month=8">Next Month</a>
+  <a class="ocal_button" href="/?&amp;ocal_action=list&amp;ocal_name=test-daily&amp;ocal_year=2024&amp;ocal_month=7">Next Year</a>
 </p>
 </div>
