--- a/tests/approvals/DailyCalendarControllerTest.testListActionRendersListWithAnEntry.approved.html
+++ b/tests/approvals/DailyCalendarControllerTest.testListActionRendersListWithAnEntry.approved.html
@@ -20,8 +20,8 @@
 </dl>
   
 <p class="ocal_pagination">
-  <a class="ocal_button" href="/?&amp;ocal_year=2023&amp;ocal_month=7&amp;ocal_action=list">Today</a>
-  <a class="ocal_button" href="/?&amp;ocal_year=2023&amp;ocal_month=8&amp;ocal_action=list">Next Month</a>
-  <a class="ocal_button" href="/?&amp;ocal_year=2024&amp;ocal_month=7&amp;ocal_action=list">Next Year</a>
+  <a class="ocal_button" href="/?&amp;ocal_action=list&amp;ocal_year=2023&amp;ocal_month=7">Today</a>
+  <a class="ocal_button" href="/?&amp;ocal_action=list&amp;ocal_year=2023&amp;ocal_month=8">Next Month</a>
+  <a class="ocal_button" href="/?&amp;ocal_action=list&amp;ocal_year=2024&amp;ocal_month=7">Next Year</a>
 </p>
 </div>
