--- a/tests/approvals/HourlyCalendarControllerTest.testListActionHandlesAjaxRequest.approved.html
+++ b/tests/approvals/HourlyCalendarControllerTest.testListActionHandlesAjaxRequest.approved.html
@@ -3,7 +3,7 @@
 <div class="ocal_week_lists" data-name="test-hourly" data-ocal-config='{"message_unsaved_changes":"There are unsaved changes that will be lost when leaving the page!","isAdmin":false}'>
   
 <p class="ocal_mode">
-  <a class="ocal_button" href="/?&amp;ocal_name=test-hourly&amp;ocal_action=calendar">Calendar view</a>
+  <a class="ocal_button" href="/?&amp;ocal_action=calendar&amp;ocal_name=test-hourly">Calendar view</a>
 </p>
   
 <div class="ocal_loaderbar"><img src="./images/ajax-loader-bar.gif" alt="loading"></div>
@@ -15,7 +15,7 @@
 </dl>
   
 <p class="ocal_pagination">
-  <a class="ocal_button" href="/?&amp;ocal_name=test-hourly&amp;ocal_year=2023&amp;ocal_week=26&amp;ocal_action=list">Today</a>
-  <a class="ocal_button" href="/?&amp;ocal_name=test-hourly&amp;ocal_year=2023&amp;ocal_week=27&amp;ocal_action=list">Next interval</a>
+  <a class="ocal_button" href="/?&amp;ocal_action=list&amp;ocal_name=test-hourly&amp;ocal_year=2023&amp;ocal_week=26">Today</a>
+  <a class="ocal_button" href="/?&amp;ocal_action=list&amp;ocal_name=test-hourly&amp;ocal_year=2023&amp;ocal_week=27">Next interval</a>
 </p>
 </div>
