Drop checks for ext/filter and ext/json
The former is no longer used, and the latter is already required (and
checked) by CMSimple_XH.

--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -47,7 +47,7 @@
 <li><a href="#danksagung">Danksagung</a></li>
 </ul>
 <h2 id="voraussetzungen">Voraussetzungen</h2>
-<p>Ocal_XH ist ein Plugin für <a href="https://cmsimple-xh.org/de/">CMSimple_XH</a>. Es benötigt CMSimple_XH ≥ 1.7.0 und PHP ≥ 7.1.0 mit der <em>json</em> Extension. Ocal_XH benötigt weiterhin <a href="https://github.com/cmb69/plib_xh">Plib_XH</a> ≥ 1.3; ist dieses noch nicht installiert (siehe <code>Einstellungen</code> → <code>Info</code>), laden Sie das <a href="https://github.com/cmb69/plib_xh/releases/latest">aktuelle Release</a> herunter, und installieren Sie es.</p>
+<p>Ocal_XH ist ein Plugin für <a href="https://cmsimple-xh.org/de/">CMSimple_XH</a>. Es benötigt CMSimple_XH ≥ 1.7.0 und PHP ≥ 7.1.0. Ocal_XH benötigt weiterhin <a href="https://github.com/cmb69/plib_xh">Plib_XH</a> ≥ 1.3; ist dieses noch nicht installiert (siehe <code>Einstellungen</code> → <code>Info</code>), laden Sie das <a href="https://github.com/cmb69/plib_xh/releases/latest">aktuelle Release</a> herunter, und installieren Sie es.</p>
 <h2 id="download">Download</h2>
 <p>Das <a href="https://github.com/cmb69/ocal_xh/releases/latest">aktuelle Release</a> kann von Github herunter geladen werden.</p>
 <h2 id="installation">Installation</h2>
