Use CsrfProtector of Plib_XH
That implies fewer null checks, and explicit checking of the return
value of `::check()`.  Either is a good thing[TM].

--- a/tests/approvals/DailyCalendarControllerTest.testDefaultActionHandlesAjaxRequest.approved.html
+++ b/tests/approvals/DailyCalendarControllerTest.testDefaultActionHandlesAjaxRequest.approved.html
@@ -5,7 +5,8 @@
 <p class="ocal_mode">
   <a class="ocal_button" href="/?&amp;ocal_name=test-daily&amp;ocal_action=list">List view</a>
 </p>
-  <input type="hidden" name="xh_csrf_token" value="dcfff515ebf5bd421d5a0777afc6358b">  
+  <input type="hidden" name="ocal_token" value="dcfff515ebf5bd421d5a0777afc6358b">
+  
 <div class="ocal_toolbar">
   <span class="ocal_state" data-ocal_state="0" title=""></span>
   <span class="ocal_state" data-ocal_state="1" title="available"></span>
