--- a/tests/approvals/HourlyCalendarControllerTest.testDefaultActionHandlesAjaxRequest.approved.html
+++ b/tests/approvals/HourlyCalendarControllerTest.testDefaultActionHandlesAjaxRequest.approved.html
@@ -6,6 +6,7 @@
   <a class="ocal_button" href="/?&amp;ocal_name=test-hourly&amp;ocal_action=list">List view</a>
 </p>
   <input type="hidden" name="ocal_token" value="dcfff515ebf5bd421d5a0777afc6358b">
+  <input type="hidden" name="ocal_checksum" value="da39a3ee5e6b4b0d3255bfef95601890afd80709">
   
 <div class="ocal_toolbar">
   <span class="ocal_state" data-ocal_state="0" title=""></span>
