--- a/tests/approvals/DailyCalendarControllerTest.testListActionRendersListWithoutEntries.approved.html
+++ b/tests/approvals/DailyCalendarControllerTest.testListActionRendersListWithoutEntries.approved.html
@@ -1,5 +1,5 @@
 
-<script type="module" src="/ocal.min.js?&amp;v=1.4-dev"></script>
+<script type="module" src="/ocal.js?&amp;v=1.4-dev"></script>
 <div class="ocal_lists" data-name="test-daily" data-ocal-config='{"message_unsaved_changes":"There are unsaved changes that will be lost when leaving the page!","isAdmin":false}'>
   
 <p class="ocal_mode">
