--- a/tests/approvals/HourlyCalendarControllerTest.testListActionHandlesAjaxRequest.approved.html
+++ b/tests/approvals/HourlyCalendarControllerTest.testListActionHandlesAjaxRequest.approved.html
@@ -1,5 +1,5 @@
 
-<script type="module" src="/ocal.js?&amp;v=1.4-dev"></script>
+<script type="module" src="/ocal.js?&amp;v=1.4"></script>
 <div class="ocal_week_lists" data-name="test-hourly" data-ocal-config='{"message_unsaved_changes":"There are unsaved changes that will be lost when leaving the page!","isAdmin":false}'>
   
 <p class="ocal_mode">
